<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Common -->
    <string name="hint_ok">OK</string>
    <string name="hint_yes">Yes</string>
    <string name="hint_no">No</string>
    <string name="hint_save">Save</string>
    <string name="hint_edit">Edit</string>
    <string name="hint_delete">Delete</string>
    <string name="hint_continue">Continue</string>
    <string name="hint_cancel">Cancel</string>
    <string name="hint_search">Search</string>
    <string name="hint_dismiss">Dismiss</string>

    <string name="generic_log_error">Error in %1$s (%2$s)</string>

    <string name="generic_msg_error">Oops! Something went wrong. Please try again.</string>

    <!-- Now Playing -->
    <string name="now_playing_default_title">Arcanos Web Rock</string>
    <string name="now_playing_default_subtitle">The radio for those who live rock and roll!</string>

    <string name="now_playing_album_art">Album art</string>

    <string name="now_playing_play">Play</string>
    <string name="now_playing_pause">Pause</string>
    <string name="now_playing_buffering">Buffering</string>
    <string name="now_playing_volume">Volume</string>

    <string name="now_playing_show_lyrics">Lyrics</string>
    <string name="now_playing_hide_lyrics">Hide</string>

    <string name="now_playing_see_website">See artist website</string>

    <string name="now_playing_share">Share</string>
    <string name="now_playing_share_title">Share Arcanos Web Rock</string>
    <string name="now_playing_share_message">I\'m listening to %1$s from %2$s on Arcanos Web Rock! Get the app at %3$s - www.arcanosmc.com.br #ArcanosWebRock</string>

    <!-- Now Playing Notification -->
    <string name="now_playing_notification_channel_name">Radio Streaming</string>
    <string name="now_playing_notification_channel_description">Radio playback controls</string>
</resources>
