<?xml version="1.0" encoding="utf-8"?><!--
Alternate layout to activity_now_playing.xml, to be used for a ConstraintLayout animation
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical"
    android:padding="@dimen/padding_regular"
    tools:context=".features.nowplaying.presentation.NowPlayingActivity">

    <ImageView
        android:id="@+id/imageViewAlbumArt"
        android:layout_width="@dimen/album_art_small"
        android:layout_height="@dimen/album_art_small"
        android:background="@color/color_black"
        android:contentDescription="@string/now_playing_album_art"
        android:transitionName="albumArtTransition"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arcanos" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPlayControl"
        style="@style/AppTheme.ExtendedFab"
        android:layout_marginLeft="@dimen/margin_regular"
        android:text="@string/now_playing_play"
        app:icon="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewAlbumArt"
        app:layout_constraintLeft_toRightOf="@+id/imageViewAlbumArt"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewSong"
        style="@style/AppTheme.Text.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_regular"
        android:gravity="center"
        android:text="@string/now_playing_default_title"
        app:layout_constraintBottom_toTopOf="@+id/textViewArtist"
        app:layout_constraintLeft_toRightOf="@+id/imageViewAlbumArt"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewAlbumArt" />

    <TextView
        android:id="@+id/textViewArtist"
        style="@style/AppTheme.Text.Body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_regular"
        android:gravity="center"
        android:text="@string/now_playing_default_subtitle"
        app:layout_constraintLeft_toRightOf="@+id/imageViewAlbumArt"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSong" />

    <Button
        android:id="@+id/buttonLyrics"
        style="@style/AppTheme.ButtonPrimary.Small"
        android:layout_marginTop="@dimen/margin_regular"
        android:text="@string/now_playing_hide_lyrics"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAlbumArt" />

    <ScrollView
        android:id="@+id/layoutLyrics"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/padding_regular"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textViewVolume"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLyrics">

        <TextView
            android:id="@+id/textViewLyrics"
            style="@style/AppTheme.Text.Body.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            tools:text="@tools:sample/lorem" />
    </ScrollView>

    <TextView
        android:id="@+id/textViewVolume"
        style="@style/AppTheme.Text.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/now_playing_volume"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toTopOf="@+id/seekVolume" />

    <SeekBar
        android:id="@+id/seekVolume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/buttonOpenInBrowser" />

    <ImageView
        android:id="@+id/buttonOpenInBrowser"
        style="@style/AppTheme.ClickableIcon"
        android:contentDescription="@string/now_playing_share"
        android:tint="@color/color_accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/seekVolume"
        app:layout_constraintRight_toLeftOf="@+id/buttonShare"
        app:srcCompat="@drawable/ic_open_in_browser" />

    <ImageView
        android:id="@+id/buttonShare"
        style="@style/AppTheme.ClickableIcon"
        android:contentDescription="@string/now_playing_see_website"
        android:tint="@color/color_accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/buttonOpenInBrowser"
        app:layout_constraintRight_toRightOf="@+id/buttonPreferences"
        app:srcCompat="@drawable/ic_share" />

    <ImageView
        android:id="@+id/buttonPreferences"
        style="@style/AppTheme.ClickableIcon"
        android:contentDescription="@string/now_playing_preferences"
        android:tint="@color/color_accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/buttonShare"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_preferences" />

</androidx.constraintlayout.widget.ConstraintLayout>
